--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -4,5 +4,6 @@
 
 <h1>This is home page</h1>
 <a href="/about">About page</a>
+<img src="/static/images/house.jpg" height="500" width="1000" />
 
 {{end}}
