--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -1,9 +1,75 @@
 {{template "base" .}}
 
+{{define "css"}}
+
+{{end}}
+
 {{define "content"}}
 
-<h1>This is home page</h1>
-<a href="/about">About page</a>
-<img src="/static/images/house.jpg" height="500" width="1000" />
+<div class="row">
+    <div class="col">
+        <div id="main-carosel" class="carousel slide carousel-fade" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#main-carosel" data-slide-to="0" class="active"></li>
+                <li data-target="#main-carosel" data-slide-to="1"></li>
+                <li data-target="#main-carosel" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="../static/images/house.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="../static/images/drinking.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Second slide label</h5>
+                        <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="../static/images/tray.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Third slide label</h5>
+                        <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h1 class="text-center mt-4">Your home away from home</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex libero animi recusandae ducimus accusamus
+                amet,
+                numquam assumenda inventore quaerat maiores? Inventore temporibus sequi consectetur aliquam alias natus
+                non illo
+                consequatur? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex libero animi recusandae
+                ducimus accusamus
+                amet,
+                numquam assumenda inventore quaerat maiores? Inventore temporibus sequi consectetur aliquam alias natus
+                non illo
+                consequatur?</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col text-center my-4">
+            <a href="/make-reservation" class="btn btn-success">Make Reservation Now</a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <button id="myButton" class="btn btn-secondary">Click Me</button>
+        </div>
+    </div>
+
+</div>
+
 
 {{end}}
